updated index.html with basic text

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
-	<head>
-	  <title>
-	  Hello World
-	    </title>		
-	</head>
+ <head>
+  <title>
+  Budder-99.github.io
+  </title>
+  </head>
 
+ <body>
+	<p>
+          "this is a test website for budder"
+        </p>	
+ </body>
 </html>
