added title and heading

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
 
  <body>
+	<h1>
+          "Budders development blog!"
+        </h1>
 	<p>
           "this is a test website for budder"
         </p>	
