added more to description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
           "Budders development blog!"
         </h1>
 	<p>
-          "this is a test website for budder"
+          "this is a test website for me to share and showcase my current projects, things I've learned as well as status information for my game servers and content"
         </p>	
+        <p>
+	 "if you're seeing this, it's working!"
+        </p>
  </body>
 </html>
